feat(front): add mobile menu

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -43,6 +43,10 @@ body {
   color: #fff;
 }
 
+// Breakpoints for media queries
+// ==================
+$breakpoint-wrapper: 900px;
+
 // Modules
 // ==================
 @import 'modules/header';
