--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -341,7 +341,7 @@
     }
   }
 }
-@media (max-width: 700px) {
+@media (max-width: 750px) {
   #homepage {
     .section.homesearch {
       margin-bottom: 250px;
@@ -367,6 +367,20 @@
       }
     }
   }
+
+    .section.topoffers .wrapper {
+      margin-bottom: 50px;
+      .wrapper_block {
+        flex-direction: column;
+        gap: 15px;
+        .text_section {
+          width: 100%;
+          .title, .desc {
+            width: 100%;
+          }
+        }
+      }
+    }
 }
 @media (max-width: 500px) {
   #homepage {
