--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -341,6 +341,40 @@
     }
   }
 }
+@media (max-width: $breakpoint-wrapper) {
+  #homepage {
+    .section.about-us .wrapper_block {
+      flex-direction: column;
+      .picture_section {
+        width: 100%;
+        height: 250px;
+        margin-bottom: 25px;
+        #team-working {
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+        #dot-background-au {
+          display: none;
+        }
+      }
+      .text_section {
+        width: 100%;
+      }
+    }
+
+    .section.our-team .wrapper_block {
+      .card, .text_section {
+        width: 45%;
+      }
+    }
+
+    .section.references .text_section .desc {
+      max-width: 100%;
+    }
+  }
+}
 @media (max-width: 750px) {
   #homepage {
     .section.homesearch {
@@ -381,6 +415,11 @@
         }
       }
     }
+
+    .section.references .references_slider .card .container .quote {
+      font-size: 14px;
+    }
+  }
 }
 @media (max-width: 500px) {
   #homepage {
@@ -389,6 +428,13 @@
        .title, .desc {
          width: 100%;
        }
+    }
+    .section.our-team .wrapper_block {
+      .card, .text_section {
+        width: 100%;
+      }
+      .text_section {
+        margin: 40px 0;
       }
     }
   }
