--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -47,3 +47,12 @@
     }
   }
 }
+
+@media (max-width: 400px) {
+  #contact {
+    .section.headings .wrapper_block .title {
+      font-size: 40px;
+      line-height: 47px;
+    }
+  }
+}
