--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -86,6 +86,10 @@
     <div class="section our-team" id="notre-equipe">
         <!-- All photos have been generated thanks to thispersondoesnotexist.com -->
         <div class="wrapper_block">
+            <div class="text_section mobile">
+                <div class="title">Notre équipe</div>
+                <div class="desc">Rencontrez notre équipe dévouée, prête à concrétiser vos rêves immobiliers avec expertise et passion.</div>
+            </div>
             <div class="card">
                 <div class="photo">
                     <img src="/images/pages/home/team/olivier.jpg" alt="Olivier Luile" />
@@ -100,7 +104,7 @@
                 <div class="name">Pierre Lotissement</div>
                 <div class="position">Conseiller Immobilier Senior</div>
             </div>
-            <div class="text_section">
+            <div class="text_section desktop">
                 <div class="title">Notre équipe</div>
                 <div class="desc">Rencontrez notre équipe dévouée, prête à concrétiser vos rêves immobiliers avec expertise et passion.</div>
             </div>
