--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="description_group">
-                        {{ property.description }}
+                        {{ property.description|raw }}
                     </div>
 
                     <div class="map_group">
