feat(front): add meta desc. & images optimization

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Accueil{% endblock %} - ImmoDemo</title>
+        <meta name="description" content="{% block description %}Découvrez l'excellence immobilière à Nantes avec ImmoDemo. Parcourez nos propriétés uniques, des appartements modernes aux maisons de caractère. Faites confiance à notre expertise locale pour trouver votre nouveau chez-vous. Profitez d'un service personnalisé et d'une équipe dévouée. ImmoDemo, votre partenaire pour l'immobilier d'exception à Nantes.{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="robots" content="noindex, nofollow" />
         <link rel="icon" href="/images/logo.svg" />
